--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,5 @@ cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/python
 
-data/
-
-**.csv
+data/*
+!data/hypothyroid2.csv
